- desk/deskapp.c desk/deskapp.h desk/deskmain.c: Allow CONF_WITH_DESK1 to
  be specified without CONF_WITH_DESKTOP_ICONS. (RFB)
- *: Fixed most warnings with -pedantic. (VRI)
- bios/aciavecs.S bios/ikbd.c bios/ikbd.h bios/sound.h: Cleaned up kbd_int()
  and keyclick() parameter signedness. (VRI)
- vdi/vdi_line.c: Now abline() uses pointers to UWORD instead of UBYTE. (VRI)
- tools/erd.c: Add static and const where relevant. Contributed by Eero
  Tamminen. (RFB)

2013-03-20
- util/bootasm.S: Removed non-ASCII dash. Contributed by David Savinkoff. (VRI)
- Makefile: Updated make help. Suggested by David Savinkoff. (VRI)
- Makefile: Adjust warning options according to GCC version. Contributed by Eero
  Tamminen. (VRI)
- tools/compr.c tools/erd.c tools/mkflop.c tools/mkrom.c tools/uncompr.c:
  Static cleanup. Contributed by Eero Tamminen. (VRI)
- Makefile bios/coldfire.c bios/coldfire.h bios/coldpriv.h bios/serport.c
  include/config.h: Added CONF_WITH_COLDFIRE_RS232 to use the internal ColdFire
  RS-232 port instead of the MFP one. (VRI)
- tools/erd.c: Fixed warnings when compiling erd.c with ICON_RSC defined. (RFB)
- tools/bug.c: Fix warning message. (RFB)
- tools/erd.c: Generate smaller icons.c if CONF_WITH_DESKTOP_ICONS is 0. (RFB)
- include/config.h: Changed the default desktop for 192K ROMs to DESK1. (RFB)

2013-03-21
- Makefile bios/coldfire.c bios/coldfire.h bios/coldfire2.S bios/coldpriv.h
  bios/mfp.c bios/vectors.S: Added CONF_COLDFIRE_TIMER_C to emulate the Timer C
  on ColdFire machines without MFP, using the internal ColdFire timers. (VRI)

2013-03-22
- bios/dmasound.c xbios.c: Implemented setracks() and setmontracks(). (THH)
- include/config.h: Enable CONF_WITH_FASTRAM when CONF_FASTRAM_SIZE is
  defined. (VRI)
- bios/vt52.c: Fixed cursor artifact on Esc E (Clear Screen). (VRI)
- cli/command.c: Use Esc E to clear the screen. (VRI)
- bios/vt52.c: Disable SERIAL_CONSOLE_HONOR_HOME by default. (VRI)